--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,10 @@ out/
 
 # Gradle files
 .gradle/
+gradle/
 build/
+gradlew
+gradlew.bat
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -41,6 +44,7 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
