--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -15,9 +15,6 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -29,19 +26,18 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.vanniktech:rxpermission:0.4.0'
+    implementation 'com.github.anadea:rxbus:1.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 }
 
 publishing.publications {
     publicLib(MavenPublication) {
         from components.android
-        groupId 'io.rightmesh'
-        artifactId 'awm'
-        version '1.0'
+        afterEvaluate {
+            groupId 'io.rightmesh'
+            artifactId 'awm'
+            version '1.0'
+        }
     }
 }
