--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
 include ':awm'
+
+//https://docs.gradle.org/4.9/userguide/publishing_maven.html#publishing_maven:deferred_configuration
+enableFeaturePreview('STABLE_PUBLISHING')
