--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 # https://reflectoring.io/fully-automated-open-source-release-chain/
 
+sudo: false
 language: android
+jdk:
+  - oraclejdk8
 android:
   components:
-    - build-tools-28.0.3
-    - android-28
+    - tools
+    - platform-tools
+    - tools
 
-    - extra-goolge-google_play_services
+    - extra-google-google_play_services
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
@@ -27,3 +31,8 @@ jobs:
       script: ./gradlew build
     - stage: release
       script: ./gradlew bintrayUpload -Dbintray.user=$bintray.user -Dbintray.key=$bintray.key -Dgpgpassphrass=$gpgpassphrase -Dbuild.number=$TRAVIS_BUILD_NUMBER
+
+before_install:
+  - pwd
+  - ls -la
+  - chmod +x /.gradlew
