--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ android:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+    - 'build-tools'
+    - 'platforms'
 
 stages:
   - name: build
