Added some checks for google play services

--- a/awm/src/main/AndroidManifest.xml
+++ b/awm/src/main/AndroidManifest.xml
@@ -16,5 +16,8 @@
         <activity
             android:name="io.rightmesh.awm.BluetoothStatsCollector$BluetoothEnableActivity"
             android:label="Enable Bluetooth"/>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 </manifest>
