--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -21,7 +21,8 @@ plugins {
 }
 
 group 'io.rightmesh'
-version '1.0.4' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
+//System.setProperty("snapshot","true")
+version '1.0.5' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
 
 android {
     buildToolsVersion "28.0.3"
