--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ jdk:
   - oraclejdk8
 android:
   components:
-    - build-tools-26.1.1
+    - build-tools-28.0.3
     - android-28
     - tools
     - platform-tools
     - tools
-
     - extra-google-google_play_services
+    
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
@@ -36,6 +36,7 @@ jobs:
 
 before_install:
   # Install SDK license so Android Gradle plugin can install deps.
+  - ls "$ANDROID_HOME"
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo "601085b94cd77f0b54ff86406957099ebe79c4d6" > "$ANDROID_HOME/licenses/android-googletv-license"
