--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ language: android
 jdk:
   - oraclejdk8
 android:
+  # if the build starts failing due to license problems - it was last fixed by pinning the specific build-tools
+  # and obtaining the latest licenses from real Android Studio install and echo-ing them into the file.
   components:
     - build-tools-28.0.3
     - android-28
@@ -36,7 +38,6 @@ jobs:
 
 before_install:
   # Install SDK license so Android Gradle plugin can install deps.
-  - ls "$ANDROID_HOME"
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo "601085b94cd77f0b54ff86406957099ebe79c4d6" > "$ANDROID_HOME/licenses/android-googletv-license"
