--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -21,8 +21,8 @@ plugins {
 }
 
 group 'io.rightmesh'
-System.setProperty("snapshot","false")
-version '1.0.6' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
+System.setProperty("snapshot","true")
+version '1.0.7' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
 
 android {
     buildToolsVersion "28.0.3"
