--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -49,6 +49,9 @@ android {
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
+    annotationProcessor 'org.projectlombok:lombok:1.18.4'
     implementation 'com.vanniktech:rxpermission:0.4.0'
     implementation 'com.github.anadea:rxbus:1.0.1'
     implementation ('com.google.android.gms:play-services-location:15.0.1') {
