--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -22,7 +22,7 @@ plugins {
 
 group 'io.rightmesh'
 System.setProperty("snapshot","yes")
-version '1.1.4' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
+version '1.1.6' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
 
 android {
     buildToolsVersion "28.0.3"
@@ -46,17 +46,42 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    testOptions {
+        unitTests.all {
+
+        }
+    }
 }
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok:1.18.4'
-    compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
-    annotationProcessor 'org.projectlombok:lombok:1.18.4'
+    //permissions
     implementation 'com.vanniktech:rxpermission:0.4.0'
     implementation 'com.github.anadea:rxbus:1.0.1'
+
+    //play services for location
     implementation ('com.google.android.gms:play-services-location:15.0.1') {
         exclude group: "com.android.support"
     }
+
+    //lombok annotations
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
+    annotationProcessor 'org.projectlombok:lombok:1.18.4'
+
+    //unit and integration tests
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.0"
+    testImplementation "org.mockito:mockito-core:2.23.0"
+    //testImplementation "org.robolectric:robolectric:3.3.2"
+    //testImplementation 'androidx.test:core:1.1.0'
+    //testImplementation 'junit:junit:4.12'
+
+    testImplementation "org.mockito:mockito-core:2.23.0"
+
+    //logging
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
 }
 
 def pomConfig = {
