Changed the disklogger to a database logger using Android room

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenLocal()
+        mavenCentral()
     }
 }
 
