--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -21,8 +21,8 @@ plugins {
 }
 
 group 'io.rightmesh'
-System.setProperty("snapshot","yes")
-version '1.1.8' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
+System.setProperty("snapshot","no")
+version '1.1.10' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
 
 android {
     buildToolsVersion "28.0.3"
@@ -78,6 +78,10 @@ dependencies {
     //testImplementation 'junit:junit:4.12'
 
     testImplementation "org.mockito:mockito-core:2.23.0"
+
+    //persistence
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     //logging
     testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
@@ -146,6 +150,7 @@ publishing.publications {
 }
 
 repositories {
+    google()
     mavenLocal()
     mavenCentral()
     jcenter()
