--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -21,8 +21,8 @@ plugins {
 }
 
 group 'io.rightmesh'
-System.setProperty("snapshot","no")
-version '1.1.10' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
+System.setProperty("snapshot","yes")
+version '1.1.11' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
 
 android {
     buildToolsVersion "28.0.3"
@@ -58,6 +58,9 @@ dependencies {
     //permissions
     implementation 'com.vanniktech:rxpermission:0.4.0'
     implementation 'com.github.anadea:rxbus:1.0.1'
+
+    //concurrent set
+    api 'com.google.guava:guava:27.0.1-android'
 
     //play services for location
     implementation ('com.google.android.gms:play-services-location:15.0.1') {
