--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -113,6 +113,7 @@ task sourceJar(type: Jar) {
 }
 
 
+/*
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
@@ -122,7 +123,7 @@ task javadoc(type: Javadoc) {
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
-}
+}*/
 
 publishing.publications {
     publicLib(MavenPublication) {
@@ -133,7 +134,7 @@ publishing.publications {
             version this.version
 
             artifact(sourceJar)
-            artifact(javadocJar)
+            //artifact(javadocJar)
 
             pom.withXml {
                 def root = asNode()
