--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -21,7 +21,7 @@ plugins {
 }
 
 group 'io.rightmesh'
-System.setProperty("snapshot","yes")
+System.setProperty("snapshot","no")
 version '1.1.12' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHOT" : "")
 
 android {
