--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -111,6 +111,7 @@ task sourceJar(type: Jar) {
     classifier "sources"
 }
 
+//android javadoc: https://gist.github.com/danielesegato/3ea6f99c968ce0b795c5390844ad4ff7
 task androidJavadocs(type: Javadoc) {
     // execute only if I'm publishing on maven
     onlyIf { gradle.taskGraph.hasTask(uploadArchives) }
