still trying to fix gpg signing issues with bintray

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
     - stage: snapshot
       script: ./gradlew artifactoryPublish -Dsnapshot=true -Dbintrayuser=$bintrayuser -Dbintraykey=$bintraykey -Dbuild.number=$TRAVIS_BUILD_NUMBER
     - stage: release
-      script: ./gradlew bintrayUpload -Dbintrayuser=$bintrayuser -Dbintraykey=$bintraykey -Dbuild.number=$TRAVIS_BUILD_NUMBER
+      script: ./gradlew bintrayUpload -Dbintrayuser=$bintrayuser -Dbintraykey=$bintraykey -Dbuild.number=$TRAVIS_BUILD_NUMBER -Dgpgpassphrase=$gpgpassphrase
 
 before_install:
   # Install SDK license so Android Gradle plugin can install deps.
