--- a/awm/pom.xml
+++ b/awm/pom.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <!-- This module was also published with a richer model, Gradle metadata,  -->
+  <!-- which should be used instead. Do not delete the following line which  -->
+  <!-- is to indicate to Gradle or any Gradle module metadata file consumer  -->
+  <!-- that they should prefer consuming it instead. -->
+  <!-- do_not_remove: published-with-gradle-metadata -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.rightmesh</groupId>
   <artifactId>awm</artifactId>
@@ -27,7 +33,7 @@
     <dependency>
       <groupId>com.google.android.gms</groupId>
       <artifactId>play-services-location</artifactId>
-      <version>15.0.1</version>
+      <version>18.0.0</version>
       <scope>runtime</scope>
       <exclusions>
         <exclusion>
@@ -43,25 +49,4 @@
       <scope>runtime</scope>
     </dependency>
   </dependencies>
-  <description>	
-Android Wireless Measurement Library aims to collect and open source wireless statistics and information in a way that does not disrupt the functioning of apps.</description>
-  <name>Android Wireless Measurement Library</name>
-  <url>https://github.com/compscidr/awm-lib</url>
-  <licenses>
-    <license>
-      <name>The GNU General Public License, Version 3.0</name>
-      <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <developers>
-    <developer>
-      <id>compscidr</id>
-      <name>Jason Ernst</name>
-      <email>ernstjason1@gmail.com</email>
-    </developer>
-  </developers>
-  <scm>
-    <url>https://github.com/compscidr/awm-lib</url>
-  </scm>
 </project>
