--- a/awm/src/main/AndroidManifest.xml
+++ b/awm/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
         <activity
             android:name="com.jasonernst.awm.collectors.BluetoothStatsCollector$BluetoothEnableActivity"
             android:label="Enable Bluetooth"/>
-        <meta-data
+        <!--<meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version" />-->
     </application>
 </manifest>
