--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -15,17 +15,14 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '11.0.4'
-      - name: build check
-        run: ./gradlew awm:build
-# todo: take out the build check and move to linter, checkstyle, unit and integration tests
-#      - name: lint
-#          run: ./gradlew awm:lint
-#      - name: lint results
-#          uses: yutailang0119/action-android-lint@v1.1.0
-#          with:
-#            xml_path: awm/build/reports/lint/report.xml
-#        - name: checkstyle
-#            run: ./gradlew awm:checkstyle
+      - name: lint
+          run: ./gradlew awm:lint
+      - name: lint results
+          uses: yutailang0119/action-android-lint@v1.1.0
+          with:
+            xml_path: awm/build/reports/lint/report.xml
+        - name: checkstyle
+            run: ./gradlew awm:checkstyle
 #        - name: junit5 units tests (with jacoco covarege reports)
 #            run: ./gradlew awm:jacocoTestReport
 #        - uses: actions/upload-artifact@v2
