Added jacoco. Renabled the entire workflow

--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -23,9 +23,9 @@ jobs:
           xml_path: awm/build/reports/lint/report.xml
       - name: checkstyle
         run: ./gradlew awm:checkstyle
-#        - name: junit5 units tests (with jacoco covarege reports)
-#            run: ./gradlew awm:jacocoTestReport
-#        - uses: actions/upload-artifact@v2
-#            with:
-#              name: awm-reports
-#              path: awm/build/reports
+      - name: junit5 units tests (with jacoco covarege reports)
+        run: ./gradlew awm:jacocoTestReport
+      - uses: actions/upload-artifact@v2
+        with:
+          name: awm-reports
+          path: awm/build/reports
