--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -22,6 +22,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'de.mannodermaus.android-junit5'
 apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
 apply plugin: 'com.hiya.jacoco-android'
@@ -34,6 +35,8 @@ android {
         targetSdkVersion 30
         versionCode 23
         versionName this.version
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArgument "runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder"
     }
 
     lintOptions {
@@ -93,6 +96,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
     testImplementation "org.mockito:mockito-core:3.9.0"
+    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:5.7.1"
 
     //persistence
     implementation 'android.arch.persistence.room:runtime:1.1.1'
