--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -96,7 +96,8 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
     testImplementation "org.mockito:mockito-core:3.9.0"
-    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:5.7.1"
+    androidTestImplementation("de.mannodermaus.junit5:android-test-core:1.2.2")
+    androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:1.2.2")
 
     //persistence
     implementation 'android.arch.persistence.room:runtime:1.1.1'
