--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -86,10 +86,7 @@ dependencies {
     //concurrent set
     implementation 'com.google.guava:guava:30.1.1-jre'
 
-    //play services for location
-//    implementation ('com.google.android.gms:play-services-location:18.0.0') {
-//        exclude group: "com.android.support"
-//    }
+    implementation "com.google.android.gms:play-services-location:18.0.0"
 
     //noinspection AnnotationProcessorOnCompilePath
     compileOnly 'org.projectlombok:lombok:1.18.20'
