--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -77,6 +77,7 @@ android {
 
 dependencies {
     def multidex_version = "2.0.1"
+    def room_version = "2.3.0"
     implementation "androidx.multidex:multidex:$multidex_version"
 
     //permissions
@@ -101,8 +102,8 @@ dependencies {
     androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:1.2.2")
 
     //persistence
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     //logging
     testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
