--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -12,12 +12,9 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha14"
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
-        classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.35"
-        classpath "com.hiya:jacoco-android:0.2"
-        classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.17.0-SNAPSHOT"
     }
 }
 
@@ -25,7 +22,37 @@ apply plugin: 'com.android.library'
 apply plugin: 'de.mannodermaus.android-junit5'
 apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
-apply plugin: 'com.hiya.jacoco-android'
+
+jacoco {
+    toolVersion = "$jacocoVersion"
+}
+
+tasks.withType(Test) {
+    jacoco {
+        includeNoLocationClasses = true
+        excludes = ['jdk.internal.*'] // Allows it to run on Java 11
+    }
+}
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
+    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug", excludes: fileFilter)
+    def mainSrc = "$project.projectDir/src/main/java"
+
+    sourceDirectories.setFrom(files([mainSrc]))
+    classDirectories.setFrom(files([debugTree]))
+    executionData.setFrom(fileTree(dir: project.buildDir, includes: [
+            'jacoco/testDebugUnitTest.exec', 'outputs/code_coverage/debugAndroidTest/connected/**/*.ec',
+            'outputs/code_coverage/debugAndroidTest/connected/*.ec'
+    ]))
+}
+
 
 android {
     compileSdkVersion 30
@@ -60,11 +87,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            testCoverageEnabled true
         }
         debug {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testCoverageEnabled true
         }
     }
@@ -75,8 +99,13 @@ android {
     }
 
     testOptions {
-        unitTests.returnDefaultValues = true
-        unitTests.includeAndroidResources = true
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        animationsDisabled true
+
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
     }
 }
 
@@ -120,7 +149,6 @@ repositories {
     google()
     mavenLocal()
     mavenCentral()
-    jcenter()
 }
 
 
@@ -155,4 +183,3 @@ afterEvaluate {
 }
 
 apply from: '../checkstyle.gradle'
-apply from: '../jacocoAndroid.gradle'
