--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.jacocoVersion = '0.8.7'
     repositories {
         google()
         mavenLocal()
@@ -9,8 +9,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-
+        classpath "com.android.tools.build:gradle:4.2.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,6 +20,16 @@ allprojects {
         google()
         mavenLocal()
         mavenCentral()
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { details ->
+                if (details.requested.group == 'org.jacoco') {
+                    details.useVersion jacocoVersion
+                }
+            }
+        }
     }
 }
 
