--- a/awm/pom.xml
+++ b/awm/pom.xml
@@ -19,21 +19,33 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>androidx.multidex</groupId>
+      <artifactId>multidex</artifactId>
+      <version>2.0.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>com.vanniktech</groupId>
       <artifactId>rxpermission</artifactId>
       <version>0.7.0</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>30.1.1-jre</version>
+      <groupId>com.google.android.gms</groupId>
+      <artifactId>play-services-location</artifactId>
+      <version>18.0.0</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>android.arch.persistence.room</groupId>
-      <artifactId>runtime</artifactId>
-      <version>1.1.1</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-android</artifactId>
+      <version>1.7.30</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>androidx.room</groupId>
+      <artifactId>room-runtime</artifactId>
+      <version>2.3.0</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
