Added pom generation for awm-example

--- a/awm-example/build.gradle
+++ b/awm-example/build.gradle
@@ -1,6 +1,5 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 30
@@ -21,6 +20,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -39,4 +41,36 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release_apk
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.jasonernst'
+                artifactId = 'awm-example'
+                version = '1.0'
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug_apk
+                groupId = 'com.jasonernst'
+                artifactId = 'awm-example-debug'
+                version = '1.0'
+            }
+        }
+    }
+    task updatePom(type: Copy) {
+        from "$buildDir/publications/release/pom-default.xml"
+        into "."
+        rename ("pom-default.xml", "pom.xml")
+        dependsOn(generatePomFileForReleasePublication)
+    }
+    build.dependsOn(updatePom)
 }
